# paper

./: .gitignore  CONFERENCE_STRATEGY_README.md  decision_matrix.md
simulation/: Dockerfile  HANDOFF.md  Makefile  README.md  check_doi.py  deep_reading_notes.md  pyproject.toml  reference_index.md
simulation/agent/: README.md  agent.py  baselines.py  c_hensachi_diagnostics.py  correlation_analysis.py  load_env.py  prompts.py  reliability.py  run_pilot.py
simulation/code/: __init__.py  build_canonical_numbers.py  figures.py  report.py  stage0_cell_propensity.py  stage0_eb_shrinkage.py  stage0_type_assignment.py  stage1_population_aggregation.py  stage2_validation.py  stage3_sensitivity.py  stage4_baselines.py  stage5_cmv_diagnostic.py  stage6_target_trial.py  stage7_counterfactual.py  stage8_transportability.py  utils_bootstrap.py  utils_diagnostics.py  utils_io.py  verify_reproduction.py
simulation/curiosity_scarcity/: README.md  SUMMARY.md  scarcity_simulation.py  scarcity_simulation_v2.py  scarcity_simulation_v3.py  scarcity_simulation_v4.py
simulation/curiosity_scarcity/output/: REPORT.md
simulation/curiosity_scarcity/output_v2/: REPORT_v2.md
simulation/curiosity_scarcity/output_v3/: REPORT_v3.md
simulation/curiosity_scarcity/output_v4/: REPORT_v4.md
simulation/data/: README_MHLW_acquisition.md  README_MIC_acquisition.md  baseline_results.json  c_hensachi_diagnostics.md  correlation_results.json  correlation_results.md  mhlw_labor_force_2022.csv  raw_dataset.csv  university_master.csv
simulation/docs/literature_audit/: deep_reading_notes.md  literature_audit.md  tier1_search_results.md  tier2_search_results.md
simulation/docs/notes/: llm_simulation_evaluation_criteria.md  research_plan_harassment_typology_simulation.md  research_vision_and_evaluation.md  research_vision_integrated.md  simulation_paper_candidates_analysis.md  simulation_paper_evaluation_integrated.md
simulation/docs/power_analysis/: D13_power_analysis.md  binary_rate_precision_14.csv  cell_counts_14.csv  cell_counts_28.csv  cell_stats_14.csv  cell_stats_28.csv  pairwise_mde_14.csv  power_analysis.py  power_analysis_summary.json
simulation/docs/pre_registration/: D12_OSF_webform_paste.md  D12_pre_registration_OSF.en.md  D12_pre_registration_OSF.md  D12_pre_registration_v1.1_to_v2.0_diff.md  D12_v2.0_methods_clarifications.md  Makefile  README.md  osf_registration_metadata.json  style.css
simulation/notes/cs222/: README.md  lecture_02.md  lecture_03.md  lecture_04.md  lecture_05.md  lecture_09.md  lecture_10.md  lecture_11.md  lecture_13.md
simulation/output/: canonical_numbers.md  reference_hashes.json
simulation/paper/: 01_intro.md  02_methods.md  03_results.md  04_discussion.md  05_refs.md  06_tables_figures.md  build_cover_letter.py  build_docx.py  cover_letter.docx  cover_letter.md  cover_letter_johp.docx  cover_letter_johp.md  cover_letter_paid.docx  cover_letter_paid.md  cover_letter_pcirr.docx  cover_letter_pcirr.md  cover_letter_rsos.docx  cover_letter_rsos.md  cover_letter_socarxiv.docx  cover_letter_socarxiv.md  introduction.md  manuscript_journal.docx  manuscript_preprint.docx  qa_log.md  title_candidates.md
simulation/paper/split/: 01_title_declarations.docx  (+3 more)
simulation/paper_IEEE/: README.md  build_conflict_of_interest.py  build_ieee_docx.py  conflict_of_interest_ieee.docx  conflict_of_interest_ieee.md  cover_letter_ieee.docx  cover_letter_ieee.md  manuscript_ieee.docx
simulation/tests/: conftest.py  test_utils_bootstrap.py  test_utils_diagnostics.py  test_utils_io.py
(+520 files in other folders)
