[project]
name = "hexaco-harassment-microsim"
version = "2.0.0"
description = "HEXACO 7-Typology Workplace Harassment Microsimulation (v2.0). Pre-registered on OSF: 10.17605/OSF.IO/3Y54U"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Eisuke Tokiwa", email = "eisuke.tokiwa@sunblaze.jp" },
]
keywords = [
    "preregistration",
    "microsimulation",
    "HEXACO",
    "workplace-harassment",
    "Japan",
    "personality",
    "target-trial-emulation",
    "empirical-bayes",
    "bootstrap",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Core scientific
    "numpy>=1.26,<3.0",
    "scipy>=1.11,<2.0",
    "pandas>=2.1,<3.0",
    "scikit-learn>=1.3,<2.0",
    # Statistics
    "statsmodels>=0.14,<1.0",
    # Plotting
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    # Storage / IO
    "h5py>=3.10,<4.0",
    "pyyaml>=6.0,<7.0",
    # Hashing / verification
    "tabulate>=0.9,<1.0",
]

[project.optional-dependencies]
# Stan / Bayesian triangulation per M1 (auxiliary 28-cell estimator)
bayes = [
    "cmdstanpy>=1.2,<2.0",
]
# PyMC alternative if Stan toolchain is unavailable
pymc = [
    "pymc>=5.10,<6.0",
    "arviz>=0.16,<1.0",
]
# Development tools
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-xdist>=3.5,<4.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.7,<2.0",
]

[project.urls]
"OSF Registration v2.0" = "https://osf.io/3y54u"
"OSF Project" = "https://osf.io/3hxz6"
"Repository" = "https://github.com/etoki/paper"
"Pre-registration document (English PDF)" = "https://osf.io/3y54u"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code"]

# ====================================================================
# Tooling configuration
# ====================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "agent",        # Big Five generative agent project (separate)
    "data",         # Big Five data
    "prior_research",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (we use formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: integration tests requiring full data",
    "stan: tests requiring Stan / cmdstanpy",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
    "agent/",
    "data/",
]

[tool.coverage.run]
source = ["code"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
